--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>To Do List</title>
   <link rel="stylesheet" href="css/styles.css">
